# orquestador-multi-agentes

./: .gitignore  README.md  pyproject.toml
data/: finance_docs.txt  hr_docs.txt  legal_docs.txt  tech_docs.txt
output/: response_20260316_192844_049880.json  response_20260316_192910_749774.json  response_20260316_192942_239325.json  response_20260316_193259_741678.json  response_20260316_193322_321974.json  response_20260316_193917_542875.json  response_20260316_194005_078913.json  response_20260316_194231_030439.json  response_20260316_194357_507064.json  response_20260316_194423_260801.json
src/: evaluator.py  exceptions.py  logger.py  orchestrator.py  output_writer.py
src/agents/: finance_agent.py  hr_agent.py  legal_agent.py  tech_agent.py
src/rag/: domain_rag.py
